Bug 380465 - balooctl checkDb stuck on DocumentTermsDB check ..
Summary: balooctl checkDb stuck on DocumentTermsDB check ..
Status: RESOLVED FIXED
Alias: None
Product: frameworks-baloo
Classification: Frameworks and Libraries
Component: balooctl (other bugs)
Version First Reported In: 5.34.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Pinak Ahuja
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-02 12:25 UTC by FabiB
Modified: 2018-02-23 20:44 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
output of strace balooctl checkDb (233.77 KB, text/plain)
2017-06-02 12:25 UTC, FabiB
Details
broken file? (2.02 MB, image/svg+xml)
2017-06-02 20:08 UTC, FabiB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FabiB 2017-06-02 12:25:56 UTC
Created attachment 105845 [details]
output of strace balooctl checkDb

On one user, when I run 

$ balooctl checkDb

ist gets stuck at "DocumentTermsDB check .."
I let it run over 10h without any change.

On all other users it runs without any Issue.

I also tried to balooctl disable and enable again, removed the config folders/database but its always the same.


I'll also attach the output of strace balooctl checkDb. I really have no idea whats wrong with this users settings.
Comment 1 FabiB 2017-06-02 20:08:15 UTC
Created attachment 105854 [details]
broken file?

created a new user, placed this file "windowborder.svg" to its home -> /home/USER/windowborder.svg

wait for baloo to get it to the index. now run 

strace balooctl checkDb

and it looks like it stuck on some kind of loop
Comment 2 Marco Leise 2017-10-14 09:37:22 UTC
I can confirm what looks like an endless loop, but didn't let it run for 10 hrs, only 1 or 2. A 1.5 GiB database should be done within 1 hr I think. I did not track the issue down to a specific file although I have all kinds of types including SVG files. This comment is mostly just to confirm this as an issue and get some attention on it.
Comment 3 Nicholas Estrada 2017-11-30 07:26:17 UTC
->balooctl checkDb
DocumentTermsDB check ..
5121701255839788 is missing 0dp from document terms db
5121357658456108 is missing 1.0 from document terms db
8493147503984686 is missing 2 from document terms db
8493151798951982 is missing 2 from document terms db
9044324952047662 is missing 25 from document terms db
9044324952047662 is missing 25.1.0 from document terms db
8493147503984686 is missing 3 from document terms db
8493151798951982 is missing 3 from document terms db
5121662601134124 is missing 303f9f from document terms db
5121662601134124 is missing 3f51b5 from document terms db
8493147503984686 is missing 4 from document terms db
8493151798951982 is missing 4 from document terms db
9044324952047662 is missing 4 from document terms db
8493147503984686 is missing 5 from document terms db
8493151798951982 is missing 5 from document terms db
Comment 4 CnZhx 2018-02-23 13:57:50 UTC
I have just run `balooctl checkDb` for about 5 hours. I aborted this process before its finish. Here is the output.
```
cnzhx@ostp:~> balooctl indexSize
Actual Size: 3.16 GiB
Expected Size: 580.46 MiB

           PostingDB:     150.90 MiB    25.997 %
         PosistionDB:     213.98 MiB    36.864 %
            DocTerms:      77.68 MiB    13.382 %
    DocFilenameTerms:      26.33 MiB     4.536 %
       DocXattrTerms:       4.00 KiB     0.001 %
              IdTree:       5.24 MiB     0.902 %
          IdFileName:      21.11 MiB     3.637 %
             DocTime:      12.80 MiB     2.205 %
             DocData:       1.76 MiB     0.303 %
   ContentIndexingDB:            0 B     0.000 %
         FailedIdsDB:            0 B     0.000 %
             MTimeDB:       7.58 MiB     1.306 %
cnzhx@ostp:~> balooctl checkDb
DocumentTermsDB check ..
25895921195746056 is missing 10dd8839 from document terms db
25895929785680648 is missing 13380d6f from document terms db
25332756493959944 is missing 145d06ca from document terms db
25334779423556360 is missing 153f37d3 from document terms db
25895929785680648 is missing 447a757d from document terms db
25332915407749896 is missing 69d43516 from document terms db
25895925490713352 is missing 6c78cfb8 from document terms db
25335943359693576 is missing 74739adf from document terms db
25895921195746056 is missing F10dd8839 from document terms db
25895929785680648 is missing F13380d6f from document terms db
25332756493959944 is missing F145d06ca from document terms db
25334779423556360 is missing F153f37d3 from document terms db
25895929785680648 is missing F447a757d from document terms db
25332915407749896 is missing F69d43516 from document terms db
25895925490713352 is missing F6c78cfb8 from document terms db
25335943359693576 is missing F74739adf from document terms db
25333929020031752 is missing Fbc3f06c4 from document terms db
25332777968796424 is missing Fd476ee90 from document terms db
25333929020031752 is missing bc3f06c4 from document terms db
25332777968796424 is missing d476ee90 from document terms db
^C
```
Comment 5 Michael Heidelbach 2018-02-23 19:05:24 UTC
balooctl checkDb is a debugging tool for developers.
Don't use it!
Execution time grows exponentially with the number of indexed files, without any progress indication. When done, all it does is print some messages, that's it. 
It does not sanitize the database!

Again, be nice to our planet (and your electricity bill) and don't use it.
Comment 6 CnZhx 2018-02-23 19:13:24 UTC
(In reply to Michael Heidelbach from comment #5)
> balooctl checkDb is a debugging tool for developers.
> Don't use it!
> Execution time grows exponentially with the number of indexed files, without
> any progress indication. When done, all it does is print some messages,
> that's it. 
> It does not sanitize the database!
> 
Thank you for the clarification. It's very helpful.
Comment 7 Michael Heidelbach 2018-02-23 20:44:55 UTC
Git commit ca333ba316a7de7aad7de0288f914e940e50fce6 by Michael Heidelbach.
Committed on 23/02/2018 at 20:47.
Pushed by michelh into branch 'master'.

balooctl: Remove checkDb option

Summary:
It has no value for users and is confusing them.

Test Plan: $ balooctl --help

Reviewers: #baloo, #frameworks, ngraham

Reviewed By: #baloo, ngraham

Tags: #frameworks, #baloo

Differential Revision: https://phabricator.kde.org/D10778

M  +4    -2    src/tools/balooctl/main.cpp

https://commits.kde.org/baloo/ca333ba316a7de7aad7de0288f914e940e50fce6