balooctl: Remove checkDb option

Summary:
It has no value for users and is confusing them.

BUG:380465

Test Plan: $ balooctl --help

Reviewers: #baloo, #frameworks, ngraham

Reviewed By: #baloo, ngraham

Tags: #frameworks, #baloo

Differential Revision: https://phabricator.kde.org/D10778